# deerwalk-library-backend

./: .env.dev  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 00b6620c23fe_changed_columns_on_borrow.py  0113d208d208_remove_unique_constraint.py  072913ee4872_init.py  13fb7d86fa16_add_revision_to_the_book_borrow.py  1410ce3a0098_create_quotes_table.py  1b8dea7b04b8_init.py  1f41e8c95f5a_add_returned_field.py  25eee93ca369_books.py  2602315490d6_updated_migrations.py  29b08cb018ed_testing.py  2d098786ec81_initial_tables.py  33c188fc148a_book_review_modal.py  34ea7fc7a132_updated_genre.py  384a9e19c576_add_book_borrow.py  38a1e611667f_fine_status_column.py  3d1b4aee2592_disabled_to_status.py  4148b4cefb5c_updated_password_reset_token_model.py  485ebe960a52_books_genre_model.py  4a078b5e02ef_initial.py  53cc7dda3af5_books_update.py  579346267baa_init.py  5c276102ed31_update_events_model.py  5c8278fa6fb9_added_book_table.py  60e87a86720c_added_password_reset_token_table.py  75a6927cab5f_recommendation_model.py  878a4ea6e345_change_metadata_to_optional.py  890cc1d908a2_book_borrow_model.py  8b70aaea46fd_message.py  91a1960dc18d_book_table.py  93bfae2baf7a_update_book_model.py  943b4661d770_add_unique_to_the_users_field.py  9553a61aba84_add_bookmark_table.py  982e7723fe3f_updated_password_reset_token_model.py  98a7f3445a5c_update_events_model.py  9e966ef21df2_genre_and_event.py  a5a5a051cb17_init.py  b05ce225c7bf_create_quotes_table.py  b0db8217c6a4_removed_teacher_recommendation_model.py  b1fd3cf56d8c_recommendation_model.py  c23db1eb68f1_add_index_to_email_field_in_users.py  (+7 more)
app/: main.py
app/background/: celery_app.py
app/background/tasks/: email_task.py
app/cli/: seed_admin.py
app/core/: config.py
app/core/dependencies/: database.py  (+2 more)
(+380 files in other folders)
