[project]
name = "deerwalk-library-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "pydantic-settings>=2.10.1",
    "pylint>=3.3.7",
    "ruff>=0.12.4",
    "sqlalchemy[asyncio]>=2.0.41",
    "uvicorn>=0.35.0",
]

[project.scripts]
dev = "app.main:run_application"
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000"
test = "pytest tests"
