[project]
name = "deerwalk-library-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiobotocore>=2.23.2",
    "alembic>=1.16.4",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.11.7",
    "pyjwt>=2.10.1",
    "pylint>=3.3.7",
    "python-multipart>=0.0.20",
    "ruff>=0.12.4",
    "sqlalchemy[asyncio]>=2.0.41",
    "types-aiobotocore[essential]>=2.23.2",
    "uvicorn>=0.35.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "W"]

[project.scripts]
dev = "app.main:run_application"
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000"
test = "pytest tests"
seed-admin = "app.cli.seed_admin:main"
